--- a/CONVERT.ipynb
+++ b/CONVERT.ipynb
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9fc07a2",
+   "id": "49a85b3d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "580241c4",
+   "id": "bd32aaf6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56b43c7d",
+   "id": "cfc20f6c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "26edd964",
+   "id": "93b008f8",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "21a8aba1",
+   "id": "0d102fa6",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8cd823ab",
+   "id": "d97dc28b",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a04e260b",
+   "id": "442dd317",
    "metadata": {},
    "outputs": [
     {
@@ -207,32 +207,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "90228fd9",
+   "execution_count": 10,
+   "id": "87854fb1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done converting scene 0 after 3.8935487270355225\n",
-      "Done converting scene 1 after 4.088725566864014\n",
-      "Done converting scene 2 after 4.022084474563599\n"
+      "Done converting scene 0 after 3.920788526535034\n",
+      "Done converting scene 1 after 3.886625289916992\n",
+      "Done converting scene 2 after 3.8339362144470215\n"
      ]
     }
    ],
    "source": [
     "for i,s in enumerate(slices):\n",
     "    t0 = time.time()\n",
-    "    vips_img = pyvips.Image.new_from_array(arr)\n",
-    "    vips_img.dzsave(OUTPUT_DIR)\n",
+    "    vips_img = pyvips.Image.new_from_array(s)\n",
+    "    vips_img.dzsave(OUTPUT_DIR+'_'+str(i))\n",
     "    print('Done converting scene', i, 'after', time.time()-t0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06573310",
+   "id": "c89fc4da",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f75fb6c",
+   "id": "397548b7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8798f8e",
+   "id": "377292d5",
    "metadata": {},
    "outputs": [],
    "source": []
