--- a/PIXELSIZE.ipynb
+++ b/PIXELSIZE.ipynb
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "94e91713",
+   "id": "8486ca41",
    "metadata": {},
    "outputs": [
     {
@@ -94,16 +94,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "adc8e8d0",
+   "execution_count": 6,
+   "id": "c8e3c5f4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Element 'ImageDocument' at 0x7fac8030a700>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img.metadata"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40728d03",
+   "id": "6ef9c366",
    "metadata": {},
    "outputs": [],
    "source": []
